<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/register_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/register_header_text"
            android:textColor="@color/orange"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/e_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/e_mail"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/register_header_text"
            app:layout_constraintTop_toBottomOf="@+id/register_header_text" />

        <EditText
            android:id="@+id/et_e_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="bugra.hatipogle@etc"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/quicksand_regular"
            app:layout_constraintTop_toBottomOf="@+id/e_mail" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/username"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/et_e_mail"
            app:layout_constraintTop_toBottomOf="@+id/et_e_mail" />
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="bugrahatipoglu"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/quicksand_regular"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/password"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/et_username"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="1111111111"
            android:inputType="numberPassword"
            android:fontFamily="@font/quicksand_regular"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="120dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/register_bottom_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/register_bottom_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
