<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/choice_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:text="@string/choice_top_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weighting"
            android:fontFamily="@font/quicksand_semibold"
            android:textColor="@color/orange"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/choice_top"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_calculation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculation"
            android:fontFamily="@font/quicksand_semibold"
            android:textColor="@color/orange"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/choice_top"
            app:layout_constraintEnd_toEndOf="parent"/>
        <CheckBox
            android:id="@+id/cb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ENTROPI"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="16sp"
            android:checked="true"
            app:layout_constraintTop_toBottomOf="@id/tv_weight"
            app:layout_constraintStart_toStartOf="@id/tv_weight"/>
        <CheckBox
            android:id="@+id/cb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SWARA"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/cb1"
            app:layout_constraintStart_toStartOf="@id/tv_weight"/>
        <CheckBox
            android:id="@+id/cb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CRITIC"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/cb2"
            app:layout_constraintStart_toStartOf="@id/tv_weight"/>
        <CheckBox
            android:id="@+id/cb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ELECTRE"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_calculation"
            app:layout_constraintStart_toStartOf="@id/tv_calculation"/>
        <CheckBox
            android:id="@+id/cb5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TOPSIS"
            android:checked="true"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/cb4"
            app:layout_constraintStart_toStartOf="@id/tv_calculation"/>
        <CheckBox
            android:id="@+id/cb6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VIKOR"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/cb5"
            app:layout_constraintStart_toStartOf="@id/tv_calculation"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:src="@drawable/choice"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/cb6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_result"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/result"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
